crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_create_basic.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<file_content
  path="/home/user/new_file.txt"
  total_lines="1"
><![CDATA[Hello, world!]]>
</file_content>
