crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_create_with_warning.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<file_content
  path="/home/user/file_with_warning.txt"
  total_lines="1"
><![CDATA[Content with warning]]>
<warning>File created in non-standard location</warning>
</file_content>
