crates/forge_app/src/snapshots/forge_app__execution_result__tests__shell_success.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<shell_output
  command="ls -la"
  exit_code="0"
><![CDATA[<stdout>
total 8
drwxr-xr-x  2 user user 4096 Jan  1 12:00 .
drwxr-xr-x 10 user user 4096 Jan  1 12:00 ..
</stdout>]]>
</shell_output>
